force-app/main/default/lwc/relatedListBodyTiles/relatedListBodyTiles.css
.slds-col.details {
    min-width: 0;
}

lightning-layout-item.tile .slds-col:first-child, lightning-layout-item.tile .slds-col:last-child {
    max-width: fit-content;
}

.skeleton-icon {
    --skeleton-width: 2rem;
    --skeleton-height: 2rem;
}

.skeleton-body {
    --skeleton-height: .75rem;
}

lightning-layout.slds-border_bottom:has(c-skeleton) {
    border-bottom: none;
    -webkit-mask-image: linear-gradient(to bottom, black 30%, transparent 100%);
    mask-image: linear-gradient(to bottom, black 30%, transparent 100%);
}

c-skeleton.skeleton-body.odd-skeleton {
    --skeleton-width: 50%;
}

lightning-layout {
    container-type: inline-size;
    container-name: tileGrid;
}

@container tileGrid (max-width: 768px) {
  lightning-layout-item { width: 100%; }
}
@container tileGrid (min-width: 769px) and (max-width: 900px) {
  lightning-layout-item { width: 50%; }
}

